crates/engine/tests/snapshots/snapshot__snapshot_tree_minimal_recipe.snap
---
source: crates/engine/tests/snapshot.rs
expression: tree_listing(&root)
---
.dockerignore
.editorconfig
.env.example
.gitignore
.vscode/extensions.json
.vscode/settings.json
LICENSE
README.md
apps/__init__.py
apps/core/__init__.py
apps/core/apps.py
apps/core/middleware.py
apps/core/migrations/__init__.py
apps/core/urls.py
apps/core/views.py
apps/users/__init__.py
apps/users/admin.py
apps/users/apps.py
apps/users/management/__init__.py
apps/users/management/commands/__init__.py
apps/users/management/commands/seed_superuser.py
apps/users/managers.py
apps/users/middleware.py
apps/users/migrations/__init__.py
apps/users/models.py
apps/users/signals.py
apps/users/tests/__init__.py
apps/users/tests/factories.py
apps/users/tests/test_models.py
apps/users/urls.py
apps/users/views.py
config/__init__.py
config/asgi.py
config/settings/__init__.py
config/settings/base.py
config/settings/local.py
config/settings/production.py
config/settings/test.py
config/urls.py
config/wsgi.py
docs/authentication.md
docs/deployment.md
docs/development.md
docs/security.md
justfile
manage.py
pyproject.toml
static/css/app.css
static/favicon.svg
static/js/app.js
templates/400.html
templates/403.html
templates/404.html
templates/500.html
templates/account/login.html
templates/account/signup.html
templates/base.html
templates/pages/about.html
templates/pages/home.html
templates/robots.txt
tests/__init__.py
tests/conftest.py
