crates/engine/tests/snapshots/snapshot__snapshot_tree_nuxt_full_recipe.snap
---
source: crates/engine/tests/snapshot.rs
expression: tree_listing(&root)
---
.dockerignore
.editorconfig
.env
.env.example
.github/workflows/ci.yml
.github/workflows/deploy.yml
.gitignore
.pre-commit-config.yaml
.vscode/extensions.json
.vscode/settings.json
LICENSE
README.md
apps/__init__.py
apps/api/__init__.py
apps/api/apps.py
apps/api/ninja_api.py
apps/api/urls.py
apps/core/__init__.py
apps/core/apps.py
apps/core/middleware.py
apps/core/migrations/__init__.py
apps/core/urls.py
apps/core/views.py
apps/users/__init__.py
apps/users/admin.py
apps/users/apps.py
apps/users/management/__init__.py
apps/users/management/commands/__init__.py
apps/users/management/commands/seed_superuser.py
apps/users/managers.py
apps/users/middleware.py
apps/users/migrations/__init__.py
apps/users/models.py
apps/users/signals.py
apps/users/tests/__init__.py
apps/users/tests/factories.py
apps/users/tests/test_models.py
apps/users/urls.py
apps/users/views.py
compose.local.yml
compose.production.yml
compose/local/django/Dockerfile
compose/local/django/celery/beat/start
compose/local/django/celery/flower/start
compose/local/django/celery/worker/start
compose/local/django/start
compose/production/django/Dockerfile
compose/production/django/celery/beat/start
compose/production/django/celery/flower/start
compose/production/django/celery/worker/start
compose/production/django/entrypoint
compose/production/django/start
compose/production/postgres/Dockerfile
compose/production/postgres/maintenance/backup
compose/production/postgres/maintenance/backups
compose/production/postgres/maintenance/restore
compose/production/traefik/Dockerfile
compose/production/traefik/traefik.yml
config/__init__.py
config/asgi.py
config/celery_app.py
config/settings/__init__.py
config/settings/base.py
config/settings/local.py
config/settings/production.py
config/settings/test.py
config/urls.py
config/wsgi.py
docs/authentication.md
docs/deployment.md
docs/development.md
docs/security.md
frontend/.env.example
frontend/.gitignore
frontend/.prettierrc
frontend/README.md
frontend/app.vue
frontend/app/assets/css/main.css
frontend/app/composables/useApi.ts
frontend/app/composables/useAuth.ts
frontend/app/composables/useCsrf.ts
frontend/app/layouts/account.vue
frontend/app/layouts/default.vue
frontend/app/middleware/auth.global.ts
frontend/app/middleware/auth.ts
frontend/app/middleware/guest.ts
frontend/app/pages/about.vue
frontend/app/pages/account/login.vue
frontend/app/pages/account/mfa-activate.vue
frontend/app/pages/account/mfa-challenge.vue
frontend/app/pages/account/profile.vue
frontend/app/pages/account/recovery-codes.vue
frontend/app/pages/account/signup.vue
frontend/app/pages/account/verify-email.vue
frontend/app/pages/index.vue
frontend/app/stores/auth.ts
frontend/app/types/allauth.d.ts
frontend/eslint.config.js
frontend/nuxt.config.ts
frontend/package.json
frontend/playwright.config.ts
frontend/public/favicon.svg
frontend/server/.gitkeep
frontend/tests/e2e/login.spec.ts
frontend/tests/stores/auth.test.ts
frontend/tsconfig.json
frontend/vitest.config.ts
justfile
manage.py
pnpm-workspace.yaml
pyproject.toml
static/css/app.css
static/favicon.svg
static/js/app.js
templates/400.html
templates/403.html
templates/404.html
templates/500.html
templates/account/login.html
templates/account/signup.html
templates/base.html
templates/pages/about.html
templates/pages/home.html
templates/robots.txt
tests/__init__.py
tests/conftest.py
