crates/engine/tests/snapshots/snapshot__snapshot_tree_react_full_recipe.snap
---
source: crates/engine/tests/snapshot.rs
expression: tree_listing(&root)
---
.dockerignore
.editorconfig
.env.example
.github/workflows/ci.yml
.github/workflows/deploy.yml
.gitignore
.pre-commit-config.yaml
.vscode/extensions.json
.vscode/settings.json
LICENSE
README.md
apps/__init__.py
apps/api/__init__.py
apps/api/apps.py
apps/api/ninja_api.py
apps/api/urls.py
apps/core/__init__.py
apps/core/apps.py
apps/core/middleware.py
apps/core/migrations/__init__.py
apps/core/urls.py
apps/core/views.py
apps/users/__init__.py
apps/users/admin.py
apps/users/apps.py
apps/users/managers.py
apps/users/middleware.py
apps/users/migrations/__init__.py
apps/users/models.py
apps/users/signals.py
apps/users/tests/__init__.py
apps/users/tests/factories.py
apps/users/tests/test_models.py
apps/users/urls.py
apps/users/views.py
compose.local.yml
compose.production.yml
compose/local/django/Dockerfile
compose/local/django/celery/beat/start
compose/local/django/celery/flower/start
compose/local/django/celery/worker/start
compose/local/django/start
compose/production/django/Dockerfile
compose/production/django/celery/beat/start
compose/production/django/celery/flower/start
compose/production/django/celery/worker/start
compose/production/django/entrypoint
compose/production/django/start
compose/production/postgres/Dockerfile
compose/production/postgres/maintenance/backup
compose/production/postgres/maintenance/backups
compose/production/postgres/maintenance/restore
compose/production/traefik/Dockerfile
compose/production/traefik/traefik.yml
config/__init__.py
config/asgi.py
config/celery_app.py
config/settings/__init__.py
config/settings/base.py
config/settings/local.py
config/settings/production.py
config/settings/test.py
config/urls.py
config/wsgi.py
docs/authentication.md
docs/deployment.md
docs/development.md
docs/security.md
frontend/.env.example
frontend/.gitignore
frontend/.prettierrc
frontend/README.md
frontend/eslint.config.js
frontend/index.html
frontend/package.json
frontend/playwright.config.ts
frontend/public/favicon.svg
frontend/src/api/client.ts
frontend/src/auth/client.ts
frontend/src/auth/csrf.ts
frontend/src/auth/guards.tsx
frontend/src/auth/store.ts
frontend/src/auth/tests/client.test.ts
frontend/src/auth/types.ts
frontend/src/env.ts
frontend/src/main.tsx
frontend/src/router.tsx
frontend/src/routes/_layout.tsx
frontend/src/routes/_not-found.tsx
frontend/src/routes/about.tsx
frontend/src/routes/account/_layout.tsx
frontend/src/routes/account/login.tsx
frontend/src/routes/account/mfa-activate.tsx
frontend/src/routes/account/mfa-challenge.tsx
frontend/src/routes/account/profile.tsx
frontend/src/routes/account/recovery-codes.tsx
frontend/src/routes/account/signup.tsx
frontend/src/routes/account/verify-email.tsx
frontend/src/routes/index.tsx
frontend/src/styles/globals.css
frontend/src/test-setup.ts
frontend/src/ui/nav.tsx
frontend/src/ui/theme.tsx
frontend/tests/e2e/login.spec.ts
frontend/tsconfig.json
frontend/tsconfig.node.json
frontend/vite.config.ts
frontend/vitest.config.ts
justfile
manage.py
pnpm-workspace.yaml
pyproject.toml
static/css/app.css
static/favicon.svg
static/js/app.js
templates/400.html
templates/403.html
templates/404.html
templates/500.html
templates/account/login.html
templates/account/signup.html
templates/base.html
templates/pages/about.html
templates/pages/home.html
templates/robots.txt
tests/__init__.py
tests/conftest.py
